@@ -2,10 +2,15 @@
 =========================
 Bumped up the transparency of shields
 Transparency of ship contacts is based on the alpha of the actual sprite:
- - Ships with custom right click ship systems won't be momentarily transparent
+ - Ships with custom right click ship systems won't be momentarily translucent
    on the radar after using them anymore (ex: Exigency Incorporated)
  - Fighters taking off or landing on a carrier now fade in/out
  - Removed "phasedShipAlphaMult" setting, added "minShipAlphaMult"
+Combat ship renderer changes:
+ - Fighters are drawn using bounds if possible, fall back to a triangle if that
+   fails (only affects Wasps in vanilla)
+ - Bumped default fighter contact scaling from 175% to 225% actual size
+ - Fixed issue where a fighter's shields weren't being scaled
 
  2.0 (October 04, 2015)
 ========================
